// File: multi-restaurant-platform/backend/build.gradle
plugins {
    id 'java'
}

description = 'Parent module for all backend services'

subprojects {
    apply plugin: 'java' // Ensure java plugin is applied

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    // Add this block to enable the -parameters flag for Java compilation
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.compilerArgs += '-parameters' // Add this line
    }

    // Common dependencies for all subprojects
    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'
    }

    tasks.withType(Test) {
        useJUnitPlatform()
    }
}
